css/style.css
/*--------------- MAIN START --------------- */
main{
    display: flex;
    width: 100%;
    height: calc(100vh - 80px);
}
/* ------- ASIDE START ------ */
aside{
    width: 220px;
    background-color: var(--aside-color);
    min-height: 400px;
}

aside a{
    text-decoration: none;
    color: var(--color-white);
    display: block;
    margin: var(--elements-spacing);
}

/* ASIDE-NAV-TOP START */
#nav-top{
    height: calc(100% - 80px);
}

#nav-top .logo-container{
    width: 120px;
    margin: var(--elements-spacing);
}

#nav-top .logo-container2{
    width: 20px;
    display: none;
}

#nav-top .logo-container img,
#nav-top .logo-container2 img{
    width: 100%;
}

aside ul{
    overflow: auto;
    background-color: var(--aside-color);
    height: calc(80vh - 260px);
}

aside nav #bordered-link{
    position: relative;
}

#special-border-v{
    position: absolute;
    top: -4px;
    left: -20px;
    border-left: solid 2px greenyellow;
    height: 30px;
}
/* ASIDE-NAV-TOP END */


/* ASIDE-NAV-BOTTOM START */
#nav-bottom{
    height: 80px;
    position: relative;
    z-index: 8;
    background-color: var(--aside-color);
    display: flex;
    flex-direction: column;
    justify-content: center;
}
/* ASIDE-NAV-BOTTOM END */
/*---------- ASIDE END --------*/


/* ----------- #CONTENT START ---------- */
#content{
    width: calc(100vw - 220px);
    background-color: var(--content-color);
    overflow: auto;
}

#content h2, #content p{
    margin-bottom: 20px;
}

#content h5{
    font-weight: 400;
    color: var(--color-white);
}

/* MAIN-HEADER START*/
#content header{
    height: 80px;
    position: sticky;
    top: 0;
    z-index: 7;
    background-color: rgba(3, 3, 3, 0.5);
    text-align: right;
    display: flex;
    align-items: center;
    justify-content: flex-end
}
/* MAIN-HEADER END*/


/* MAIN-NAV START */
#content ul{
    list-style: none;
    text-align: center;
}

#content ul li{
    display: inline-block;
}

#content> nav a{
    text-decoration: none;
    color: var(--color-white);
    padding: 0 1rem;
    line-height: 2rem;
}

#content> nav ul li:first-child{
    position: relative;
}

#special-border{
    border-bottom: solid 2px greenyellow;
    position: absolute;
    bottom: 0px;
    left: 50%;
    transform: translate(-50%, -50%);
    width: 30px;
}
/* MAIN-NAV END */


/* SECTIONS (1&2) START */
#content .img-wrapper{
    position: relative;
}

#content .img-wrapper-hover{
    display: none;
    background-color: rgba(0, 0, 0, 0.6);
    position: absolute;
    top: 0;
    right: 0;
    left: 0;
    bottom: 0;
    z-index: 5;
}


#content .img-wrapper-hover a{
    text-decoration: none;
    color: white;
}

#content img{
    width: 100%;
    height: 100%;
}


/* SECTIONS (1&2) END */


/* SECTION 3-ARTISTI PIU POPOLARI START */
#artists img{
    border-radius: 50%;
}

/* changed top cause the image border-radius wasnt perfect */
#artists .img-wrapper-hover{
    top: -3px;
}
/* SECTION 3-ARTISTI PIU POPOLARI END */
/* ----------- #CONTENT END ---------- */
/*--------------- MAIN END ---------------*/


/*--------------- FOOTER START ---------------*/
#player a{
    text-decoration: none;
}
/* ------PLAYER (left side) start -------- */
#player{
    background-color: var(--footer-color);
    height: 80px;
    position: relative;
    z-index: 20;
}

#player .wrapper{
    display: flex;
    justify-content: space-between;
    align-items: center;
    height: 80px;
}

.playing{
    display: flex;
    justify-content: space-between;
}

footer .img-wrapper{
    height: 40px;
    width: 40px;
    margin-right: 10px;
}

footer img{
    height: 100%;
    width: 100%;
}

.playing >div:first-of-type{
    display: flex;
    align-items: center;
    margin-right: 20px;
}

.playing >div:last-of-type{
    display: flex;
    align-items: center;
}

.playing h5, .playing a .font-awesome-icon{
    font-weight: 400;
    color: var(--color-white);
}

.playing a{
    margin-right: 5px;
}
/* ------PLAYER (left side) end -------- */


/* ------CONTROLS (MIDDLE) start -------- */
.controls{
    width: 40%;
    display: flex;
    flex-direction: column;
    gap: 10px;
}

.controls-top{
    text-align: center;
    padding: 10x; 
}

.controls a{
    text-decoration: none;
    color: white;
    margin: 5px;
}

.controls-bottom{
    display: flex;
    justify-content: space-between;
    padding: 5px;
}

.controls .progress-bar { 
    height: 5px;
    min-width: 100px;
    width: 85%;
    position: relative;
    background: #555;
    border-radius: 22px;
    margin: 3px;
  }

.controls .progress-bar > span{
    display: block;
    height: 100%;
    width: 25%;
    border-top-right-radius: 16px;
    border-bottom-right-radius: 16px;
    border-top-left-radius: 20px;
    border-bottom-left-radius: 20px;  
    background-color: white;
    position: relative;
}

#play{
    transition: 0.3s;
}

#play .play-icon{
    
}
/* ------CONTROLS (MIDDLE) end -------- */


/* ------AUDIO (right side) start -------- */
.audio{
    display: flex;
}

.audio a{
    text-decoration: none;
    color: white;
}

.audio .progress-bar { 
    height: 5px;
    width: 80px;
    position: relative;
    background: #555;
    border-radius: 22px;
    margin: 3px;
  }

.audio .progress-bar > span{
    display: block;
    height: 100%;
    width: 25%;
    border-top-right-radius: 16px;
    border-bottom-right-radius: 16px;
    border-top-left-radius: 20px;
    border-bottom-left-radius: 20px;  
    background-color: white;
    position: relative;
}
/* ------AUDIO (right side) end -------- */

.circle{
    height: 10px;
    width: 10px;
    background-color: white;
    border-radius: 50%;
    position: absolute;
    top: -2.5px;
    right: 0;
    display: none;
}
/*--------------- FOOTER END ---------------*/

